--- a/src/styles.css
+++ b/src/styles.css
@@ -6,7 +6,7 @@
 
 body {
   margin: auto;
-  max-width: 800px;
+  margin-top: 100px;
 }
 
 h1,
@@ -30,12 +30,16 @@ h3 {
 }
 
 p {
-  background: var(--secondary-color);
-  padding: 20px;
+  background: #ffff;
   border-radius: 4px;
   font-size: 18px;
   line-height: 1.5;
-  text-align: center;
+}
+
+.navbar {
+  position: fixed;
+  top: 0px;
+  width: 100%;
 }
 
 .navigation-links {
@@ -63,7 +67,11 @@ p {
   border: 1px solid var(--primary-color);
 }
 
-.homepage-link {
+.btn {
+    background-color: var(--primary-color) !important;
+}
+
+/*.homepage-link {
   color: var(--primary-color);
   text-align: center;
   display: block;
@@ -76,7 +84,7 @@ p {
 
 .about-paragraphs p {
   margin: 10px;
-}
+}*/
 
 .email-link {
   display: flex;
