--- a/src/styles.css
+++ b/src/styles.css
@@ -5,7 +5,6 @@
 }
 
 body {
-  margin: auto;
   margin-top: 100px;
 }
 
@@ -68,7 +67,7 @@ p {
 }
 
 .btn {
-    background-color: var(--primary-color) !important;
+  background-color: var(--primary-color) !important;
 }
 
 /*.homepage-link {
@@ -96,4 +95,30 @@ p {
 
 .email-link:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 576px) {
+  h1 {
+    font-size: 48px;
+    line-height: 1.5;
+  }
+
+  h2 {
+    font-size: 32px;
+    text-align: center !important;
+  }
+
+  p {
+    text-align: center;
+  }
+
+  .btn {
+    display: block;
+    text-align: center;
+    margin: 0 20px;
+  }
+
+  .index-img {
+    display: none;
+  }
 }
