--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,8 @@
 :root {
-  --bg-color: #faf4f0;
-  --font-family: Helvetica, sans-serif;
-  --primary-color: #6c63ff;
-  --secondary-color: #f5f2fe;
+  --bg-color: #f4eeff;
+  --font-family: "Poppins", sans-serif;
+  --primary-color: #424874;
+  --secondary-color: #dcd6f7;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
   --rectangle-color: #473262;
   --rectangle-shadow-color: rgb(219, 197, 248);
@@ -21,15 +21,15 @@ h3 {
 }
 
 h1 {
-  font-size: 96px;
+  font-size: 70px;
 }
 
 h2 {
-  font-size: 44px;
+  font-size: 30px;
 }
 
 h3 {
-  font-size: 24px;
+  font-size: 20px;
   opacity: 0.7;
 }
 
@@ -40,7 +40,7 @@ p {
   line-height: 1.5;
 }
 
-img{
+img {
   color: var(--rectangle-color);
 }
 
@@ -100,7 +100,7 @@ img{
 
 .about-paragraphs p {
   margin: 10px;
-  padding:60px;
+  padding: 60px;
 }
 
 .email-link {
@@ -109,6 +109,10 @@ img{
   color: var(--primary-color);
   font-size: 28px;
   text-decoration: none;
+}
+
+.email-link:hover {
+  text-decoration: underline;
 }
 
 .phone {
@@ -121,12 +125,12 @@ img{
   gap: 16px;
 }
 
-.icons{
+.icons {
   width: 74px;
 }
 
-.email-link:hover {
-  text-decoration: underline;
+.container h2 {
+  text-align: left;
 }
 
 @media (max-width: 576px) {
