adding link to shecodes.io

--- a/src/styles.css
+++ b/src/styles.css
@@ -78,6 +78,16 @@ hero .heroRightLeft {
   margin-top: 40px;
 }
 
+.shecodesLink {
+  color: black;
+  text-decoration: none;
+}
+
+.shecodesLink:hover {
+  color: var(--primary-color);
+  text-decoration: underline;
+}
+
 .navigation-links {
   display: flex;
   flex-direction: row;
