--- a/src/styles.css
+++ b/src/styles.css
@@ -106,17 +106,16 @@ hero .heroRightLeft {
 .initials {
   font-family: var(--font-family);
   font-size: 34px;
-  color: white;
+  color: black;
 }
 
 .initials:hover {
   scale: 1.2;
-  color: var(--secondary-color);
   transition: 200ms;
 }
 
 .contact-link {
-  color: white;
+  color: black;
   background-color: var(--primary-color);
   border: 1px solid #dcd6f7;
   box-shadow: var(--box-shadow);
@@ -124,12 +123,11 @@ hero .heroRightLeft {
 
 .contact-link:hover {
   scale: 1.2;
-  color: var(--secondary-color);
   transition: 200ms;
 }
 
 .about-link {
-  color: var(--primary-color);
+  color: black;
   background-color: white !important;
   border: 1px solid #dcd6f7;
   box-shadow: var(--box-shadow);
@@ -137,7 +135,6 @@ hero .heroRightLeft {
 
 .about-link:hover {
   scale: 1.2;
-  color: var(--secondary-color);
   transition: 200ms;
 }
 
@@ -145,11 +142,11 @@ hero .heroRightLeft {
   background-color: var(--primary-color) !important;
   box-shadow: var(--box-shadow);
   border: none;
+  color: black;
 }
 
 .projectBtns:hover {
   scale: 1.2;
-  color: var(--secondary-color);
   transition: 200ms;
 }
 
@@ -199,7 +196,7 @@ footer {
 }
 
 footer .contactMe {
-  color: white;
+  color: black;
 }
 
 footer .contact-box {
@@ -211,7 +208,7 @@ footer .contact-box {
 
 footer .email-link {
   text-decoration: none;
-  color: white;
+  color: black;
   font-size: 24px;
 }
 
@@ -221,7 +218,7 @@ footer .email-link:hover {
 
 footer .phone {
   text-decoration: none;
-  color: white;
+  color: black;
   font-size: 24px;
 }
 
@@ -232,7 +229,7 @@ footer .phone:hover {
 footer .social-links a {
   margin: 0 20px;
   color: var(--primary-color);
-  background: white;
+  background: black;
   padding: 10px 14px;
   border-radius: 50%;
   font-size: 18px;
@@ -275,5 +272,9 @@ footer .social-links a:hover {
 
   .contain-text {
     padding: 50px 63px;
+  }
+
+  footer .email-link {
+    font-size: 16px;
   }
 }
