--- a/src/styles.css
+++ b/src/styles.css
@@ -277,4 +277,8 @@ footer .social-links a:hover {
   footer .email-link {
     font-size: 16px;
   }
+
+    footer .phone {
+    font-size: 16px;
+  }
 }
